--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "express-session": "^1.18.0",
         "md5": "^2.3.0",
         "morgan": "^1.10.0",
+        "pandoc": "^0.2.0",
         "pug": "^3.0.3"
     }
 }
